fix: remove key and id partner to list
